# rust-indexer

./: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
architecture/: backfill.excalidraw.json  overall-architecture.excalidraw.json  real-time-ingestion.excalidraw.json
migrations/: 0001_init.sql  0002_init.sql  0003_drop_legacy_tables.sql  0004_create_backfill_progress.sql  0005_make_receipt_json_nullable.sql
scripts/: check_backfill_range.sh  check_env.sh  compare_upstream.sh  dev_reset.sh  dev_up.sh  flush_redis.sh  query_receipt.sh  query_tx.sh  reset_backfill_progress.sh  run_backfill.sh  test_rpc_calls.sh  test_store.sh
src/: config.rs  lib.rs  models.rs
src/indexer/: backfill.rs  mod.rs  shreds.rs
src/rpc/: http.rs  ws.rs
src/server/: jsonrpc.rs
src/store/: mod.rs  postgres.rs  redis.rs  repository.rs
